--- a/client/src/components/ControlPanel/styles.css
+++ b/client/src/components/ControlPanel/styles.css
@@ -1,11 +1,11 @@
 .control-panel {
-  width: 15vh;
-  height: 20vh;
+  width: 150px;
+  height: 200px;
   background-color: var(--bg-color);
   color: var(--font-color);
   position: fixed;
   right: 20px;
-  bottom: 50%;
+  bottom: 20px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 20px;
   padding: 10px;
