--- a/client/src/components/ControlPanel/styles.css
+++ b/client/src/components/ControlPanel/styles.css
@@ -24,52 +24,52 @@
   cursor: pointer;
 }
 
-h4 {
+.control-panel h4 {
   text-align: center;
   font-size: 18px !important;
 }
 
-p {
+.control-panel p {
   min-width: 36px;
   margin: 0 !important;
 }
 
-div input[type='radio'] {
+.control-panel div input[type='radio'] {
   margin: 0 3px 0 2px;
   align-self: center;
 }
 
-div input[type='radio']:last-of-type {
+.control-panel div input[type='radio']:last-of-type {
   margin: 0 5px 0 5px;
 }
 
-.setup {
+.control-panel .setup {
   transition: opacity 1s width 0.2s height 0.2s;
 }
 
-.setup.hidden {
+.control-panel .setup.hidden {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-.icon-button.hidden {
+.control-panel .icon-button.hidden {
   width: 0;
   height: 0;
   opacity: 0;
 }
 
-.icon-button {
+.control-panel .icon-button {
   width: 90%;
   height: 90%;
   transition: all 1s;
 }
 
-.icon-button svg {
+.control-panel .icon-button svg {
   width: 100%;
   height: 100%;
 }
 
-.icon-button svg path {
+.control-panel .icon-button svg path {
   stroke: var(--font-color);
 }
