--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,3 +52,135 @@ input::placeholder {
   line-height: 21px;
   color: #333333;
 }
+
+.bg-animation {
+  background: linear-gradient(302deg, #000000, #ffffff, #000000, #000000);
+  background-size: 800% 800%;
+  width: 100vw;
+  height: 100vh;
+  -webkit-animation: AnimationName 18s ease infinite;
+  -moz-animation: AnimationName 18s ease infinite;
+  animation: AnimationName 18s ease infinite;
+}
+
+.card {
+  border-radius: 15px !important;
+  box-shadow: 5px 10px #888888;
+  background-color: rgba(255, 255, 255, 0.7) !important;
+  border: 1px solid rgba(0, 0, 0, 0.6) !important;
+}
+
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 0% 60%;
+  }
+  50% {
+    background-position: 100% 41%;
+  }
+  100% {
+    background-position: 0% 60%;
+  }
+}
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 0% 60%;
+  }
+  50% {
+    background-position: 100% 41%;
+  }
+  100% {
+    background-position: 0% 60%;
+  }
+}
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 60%;
+  }
+  50% {
+    background-position: 100% 41%;
+  }
+  100% {
+    background-position: 0% 60%;
+  }
+}
+
+.card a {
+  color: #198754;
+  font-weight: 900;
+  cursor: pointer;
+  transition: transform 1s;
+}
+
+.card a:hover {
+  color: #198754;
+  transform: scale(1.2);
+}
+
+label {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.card svg {
+  width: 25%;
+  height: 25%;
+  margin-left: 35px;
+}
+
+button[type='submit'] {
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.form-group {
+  margin-top: 10px;
+}
+
+.custom-nav-brand svg {
+  height: 100%;
+  width: 45px;
+  margin-right: 13px;
+}
+
+.repo-list-item {
+  font-size: 17px;
+  border: 1px solid var(--primary);
+  border-radius: 20px;
+  background-color: var(--primary-contrast);
+  color: var(--primary);
+  padding: 30px 40px;
+  line-height: 28px;
+}
+
+.repo-list-item:hover {
+  background-color: var(--primary);
+  color: var(--primary-contrast);
+  border: 1px solid var(--primary-contrast);
+}
+
+.repo-list-item:hover .star {
+  fill: var(--primary-contrast);
+}
+.repo-list-item .repo-name {
+  font-weight: 600;
+  font-size: 25px;
+}
+
+.repo-list-item .repo-owner {
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.repo-creation-date strong {
+  font-size: 13px;
+}
+
+.star {
+  cursor: pointer;
+  transition: transform 1s;
+}
+
+.star:hover {
+  transform: scale(1.4);
+}
