--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,6 +24,7 @@ body {
   box-sizing: inherit;
   background-color: var(--bg-color) !important;
   color: var(--font-color) !important;
+  overflow: hidden;
 }
 
 *,
